Dark mode fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -96,9 +96,26 @@
   font-size: 28px;
 }
 
-/* .alert--secondary {
-  color: #ffb126;
-} */
+.alert--secondary {
+  color: var(--secondary-custom);
+}
+
+.alert--secondary a {
+  color: var(--secondary-custom)
+}
+
+.button--secondary {
+  --ifm-button-border-color: var(--button-card);
+}
+
+.button--secondary:not(.button--outline) {
+    --ifm-button-background-color: var(--button-card);
+  }
+
+.button--secondary:not(.button--outline):hover {
+      --ifm-button-background-color: var(--ifm-color-secondary-dark);
+      --ifm-button-border-color: var(--ifm-color-secondary-dark);
+    }
 
 html[data-theme='light'] {
   --ifm-link-color: #5784b1;
@@ -123,7 +140,6 @@ html[data-theme='light'] {
   --ifm-color-content-inverse: var(--ifm-color-emphasis-0);
   --ifm-color-emphasis-0: var(--ifm-color-gray-0);
   --ifm-color-gray-0: var(--ifm-color-white);
-  --ifm-color-gray-900: #1c1e21;
   --ifm-color-white: #fff;
   --ifm-color-danger: var(--ifm-color-danger-darker);
   --note-title-color: #113355;
@@ -131,6 +147,9 @@ html[data-theme='light'] {
   --row-2-color: #f5f6f7;
   --row-title-color: #e1e2e4;
   --box-color: lightgrey;
+  --secondary-custom: #1c1e21;
+  --ra-color-text-dark: #1c1e21;
+  --button-card: #ebedf0;
 }
 
 html[data-theme='dark'] {
@@ -147,8 +166,10 @@ html[data-theme='dark'] {
   --row-2-color: #1c1e21;
   --row-title-color: #000000;
   --box-color: #606770;
-  --ifm-color-secondary: #242526;
-  --ifm-color-gray-900: #ffffff;
+  --ifm-color-secondary: #232526;
+  --secondary-custom: #ffffff;
+  --ra-color-text-dark:  #5ca0ff;
+  --button-card: #717171;
 }
 
 /*.navbar__logo {*/
